--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -15,32 +15,32 @@
 	<form #loginForm="ngForm" novalidate>
 		<ion-list no-lines>
 			<ion-item>
-				<ion-label stacked color="primary">Username</ion-label>
-				<ion-input [(ngModel)]="login.username" name="username" type="text" #username="ngModel" spellcheck="false" autocapitalize="off"
+				<ion-label stacked color="primary">Email</ion-label>
+				<ion-input [(ngModel)]="login.username" name="username" type="text" #username="ngModel" placeholder="Email used during registration" spellcheck="false" autocapitalize="off"
 					required>
 				</ion-input>
 			</ion-item>
 			<p ion-text [hidden]="username.valid || submitted == false" color="danger" padding-left>
-				Username is required
+				Invalid / Unregistred Email
 			</p>
 
-			<ion-item>
+			<!-- <ion-item>
 				<ion-label stacked color="primary">Password</ion-label>
 				<ion-input [(ngModel)]="login.password" name="password" type="password" #password="ngModel" required>
 				</ion-input>
 			</ion-item>
 			<p ion-text [hidden]="password.valid || submitted == false" color="danger" padding-left>
 				Password is required
-			</p>
+			</p> -->
 		</ion-list>
 
 		<ion-row responsive-sm>
 			<ion-col>
 				<button ion-button (click)="onLogin(loginForm)" type="submit" block>Login</button>
 			</ion-col>
-			<ion-col>
+			<!-- <ion-col>
 				<button ion-button (click)="onSignup()" color="light" block>Signup</button>
-			</ion-col>
+			</ion-col> -->
 		</ion-row>
 	</form>
 
