--- a/src/pages/tabs-page/tabs-page.html
+++ b/src/pages/tabs-page/tabs-page.html
@@ -1,6 +1,7 @@
 <ion-tabs [selectedIndex]="mySelectedIndex" name="conference">
   <ion-tab [root]="tab1Root" tabTitle="Schedule" tabIcon="calendar" tabUrlPath="conference-schedule"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Speakers" tabIcon="contacts"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Map" tabIcon="map"></ion-tab>
-  <ion-tab [root]="tab4Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Exhibitors" tabIcon="briefcase"></ion-tab>
+  <ion-tab [root]="tab4Root" tabTitle="Map" tabIcon="map"></ion-tab>
+  <ion-tab [root]="tab5Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
 </ion-tabs>
