--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -8,16 +8,21 @@
 </ion-header>
 
 <ion-content class="outer-content">
-  <div padding-top text-center *ngIf="username">
-    <img src="http://www.gravatar.com/avatar?d=mm&s=140" alt="avatar">
-    <h2>{{username}}</h2>
+  <div padding-top text-center *ngIf="profile">
+    <!-- <img src="http://www.gravatar.com/avatar?d=mm&s=140" alt="avatar"> -->
+    <img src="http://cioconvex.mampu.gov.my/qrdirectory/{{profile.qr_code}}" alt="avatar">
 
-    <ion-list inset>
+    <h2>{{profile.fullname}}</h2>
+
+    <p>{{profile.email}}</p>
+
+    <!-- <ion-list inset>
       <button ion-item (click)="updatePicture()">Update Picture</button>
       <button ion-item (click)="changeUsername()">Change Username</button>
       <button ion-item (click)="changePassword()">Change Password</button>
       <button ion-item (click)="support()">Support</button>
       <button ion-item (click)="logout()">Logout</button>
-    </ion-list>
+    </ion-list> -->
+
   </div>
 </ion-content>
