--- a/src/pages/qrscanner/qrscanner.html
+++ b/src/pages/qrscanner/qrscanner.html
@@ -1,17 +1,39 @@
 <ion-header>
-
   <ion-navbar>
-    <ion-title>PSCC Scanner</ion-title>
+    <ion-title>QR Scanner</ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
 <ion-content padding>
-    <button ion-button (click)="scan()">Scan ... </button>
-    <div *ngIf="scanData">
-        <p>Scanned Text : {{scanData.text}}</p>
-        <p>Scanned Format : {{scanData.format}}</p>
+  <div text-center>
+      <button ion-button (click)="scan()">Scan QR Code </button>
+      <br>
+      <hr class="line-breaker">
+      <br>
+      <div *ngIf="exhibitor">
+          <h3>{{exhibitor.exhibitor}}</h3>
+          <ion-badge class="cat-{{exhibitor.cat}}">{{exhibitor.cat_name}}</ion-badge>
+          <hr class="line-breaker">
+          <div *ngIf="!rated">
+              <h4 class="rate-label">Booth Rating</h4>
+              <rating [(ngModel)]="rate" 
+                readOnly="false"
+                max="5"
+                emptyStarIconName="star-outline"
+                halfStarIconName="star-half"
+                starIconName="star"
+                nullable="false"
+                (ngModelChange)="onModelChange($event, exhibitor.id)">
+              </rating>
+          </div>
 
-    </div>
+          <div *ngIf="rated">
+              <h4 class="rate-label">You have rated this speaker</h4>
+          </div>
+
+      </div>
+      <br>
+      <button ion-button (click)="done()">Back</button>
+  </div>
 </ion-content>
